# video_re_encoder

./: .gitignore  .gitmodules  CMakeLists.txt  RangeSlider.cpp  RangeSlider.h  form.ui  listdialog.cpp  listdialog.hpp  listdialog.ui  main.cpp  main_resources.qrc  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  processwidget.cpp  processwidget.hpp  processwidget.ui  rangeslider.cpp  rangeslider.hpp  videoinfo.cpp  videoinfo.hpp  videoinfo_stream.cpp  videoinfo_stream.hpp  videoinfowidget.cpp  videoinfowidget.hpp  videoinfowidget.ui
resources/: app_icon.kra
